/*
 * Copyright 2022 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';
package trac.config;

option java_package = "com.accenture.trac.config";
option java_multiple_files = true;


message PlatformConfig {

  map<string, string> config = 1;

  InstantMap instances = 2;
  ServiceMap services = 3;
}


message InstantMap {

  repeated InstanceConfig meta = 1;
  repeated InstanceConfig data = 2;
}

message InstanceConfig {

  string scheme = 1;
  string host = 2;
  uint32 port = 3;
}


message ServiceMap {

  MetaServiceConfig meta = 1;
  DataServiceConfig data = 2;
}


message MetaServiceConfig {

  uint32 port = 1;

  string dalType = 2;
  map<string, string> dalProps = 3;
}


message DataServiceConfig  {

  uint32 port = 1;

  string defaultStorageKey = 2;
  string defaultStorageFormat = 3;

  map<string, StorageConfig> storage = 4;
}

message StorageConfig {

  repeated StorageInstance instances = 1;
}

message StorageInstance {

  string storageType = 1;
  map<string, string> storageProps = 2;
}
